(fix) quote spacing

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -286,7 +286,6 @@
     }
 
     blockquote {
-        margin-top: $spacing-80;
         display: block;
 
         @include mobile(min) {
